# go-ethereum

./: .gitignore  Cargo.toml  Makefile  go.mod  go.sum
core/vm/: contracts.go  contracts_test.go
precompiles/: Cargo.toml  README.md  precompiles.go  precompiles_test.go
precompiles/examples/: examples.rs
precompiles/src/: anemoi.rs  error.rs  expander.rs  lib.rs  utils.rs
precompiles/src/anon/: anonymous.rs  deposit.rs  ownership.rs  transfer.rs
