[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
expander-rs = { git = "https://github.com/PolyhedraZK/Expander" }
arith = { git = "https://github.com/PolyhedraZK/Expander" }
tempfile = "3.12.0"
alloy = { version = "0.2.1", features = ["sol-types"] }
