[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
ethabi = "18.0.0"
primitive-types = "0.12.2"
lazy_static = "1.4.0"
bincode = "1.3.3"
sha3 = "0.10.8"
rayon = "1.7.0"
num-bigint = "0.4"
hypr-crypto = { package = "crypto", path = "../hypr-crypto-lib/crypto" }
hypr-algebra = { package = "algebra", path = "../hypr-crypto-lib/algebra" }
hypr-api = { package = "api", path = "../hypr-crypto-lib/api" }
hypr-plonk = { package = "plonk", path = "../hypr-crypto-lib/plonk" }
ark-std = { version = "0.4.0", features = ["std"] }
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-bn254 = "0.4.0"

[dev-dependencies]
hex = "0.4.3"
serde = "1.0.203"
rand_chacha = "0.3.1"
libsecp256k1 = '0.7'